--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "pg-format": "^1.0.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "supertest": "^6.2.4"
   },
   "jest": {
-    "setupFilesAfterEnv": [ "jest-extended/all" ]
+    "setupFilesAfterEnv": [
+      "jest-extended/all"
+    ]
   }
 }
