--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
-        "pg": "^8.7.3"
+        "pg": "^8.7.3",
+        "supertest": "^6.2.4"
     },
     "jest": {
         "setupFilesAfterEnv": [
